# basequery

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: options.cmake  packaging.cmake
osquery/: CMakeLists.txt
osquery/config/: config.cpp
osquery/config/tests/: config_tests.cpp
osquery/core/: CMakeLists.txt  init.cpp  query.cpp  system.cpp
osquery/core/tests/: CMakeLists.txt
osquery/database/: database.cpp  database.h
osquery/devtools/tests/: CMakeLists.txt
osquery/dispatcher/: CMakeLists.txt  scheduler.cpp
osquery/events/: CMakeLists.txt  events.cpp  extension_events.cpp  extension_events.h
osquery/events/tests/: CMakeLists.txt
osquery/extensions/: CMakeLists.txt  impl_thrift.cpp  interface.cpp  interface.h
osquery/filesystem/: filesystem.cpp  filesystem.h
osquery/filesystem/tests/: filesystem.cpp
osquery/main/: CMakeLists.txt
osquery/main/harnesses/: CMakeLists.txt
osquery/registry/tests/: CMakeLists.txt
osquery/remote/enroll/: CMakeLists.txt  enroll.cpp
osquery/remote/tests/: CMakeLists.txt  test_utils.cpp
osquery/remote/transports/: CMakeLists.txt  tls.cpp
osquery/sdk/: CMakeLists.txt
osquery/sdk/tests/: registry_tests.cpp
osquery/sql/: CMakeLists.txt  sqlite_util.cpp  virtual_table.cpp  virtual_table.h
osquery/sql/tests/: sqlite_util_tests.cpp
osquery/tables/: CMakeLists.txt
osquery/tables/system/: CMakeLists.txt
osquery/tables/utility/: CMakeLists.txt
osquery/utils/: CMakeLists.txt
osquery/utils/json/: json.h
osquery/utils/system/: CMakeLists.txt
osquery/utils/system/posix/: system.h
plugins/config/parsers/: CMakeLists.txt  decorators.cpp
plugins/config/parsers/tests/: CMakeLists.txt
plugins/remote/enroll/tests/: tls_enroll_tests.cpp
specs/: CMakeLists.txt
tests/integration/tables/: CMakeLists.txt
tools/codegen/: CMakeLists.txt
tools/tests/: CMakeLists.txt  test_osqueryi.py
tools/tests/configs/: test_parse_items.conf
